Check if valid bingo race before checking if valid result